# Diplodocus

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  README.md  b.sh  br.sh  clean.sh  install_dependencies.sh  r.sh  sample_config.json
experiments/: .gitignore  config_template.json  run_benchmarks.py
res/: CornellBox-Bunny.mtl  CornellBox-Dragon.mtl  CornellBox-Original.mtl  CornellBox-Sphere.mtl
src/: main.cc
src/acceleration/: aabb.h  acceleration_structure.h  acceleration_structure_factory.cc  acceleration_structure_factory.h  dummy_acceleration_structure.cc  dummy_acceleration_structure.h  lbvh.cc_old  lbvh.h_old  sbvh.cc  sbvh.h
src/app/: app.h  app_context.h  cli_app.cc  cli_app.h
src/config/: acceleration_structure_config.h  config.h  image_export_config.h  render_config.h  scene_load_config.h  stats_export_config.h
src/framebuffer/: framebuffer.cc  framebuffer.h
src/gpu/: cuda_buffer.h  cuda_compat.h  cuda_math.h  cuda_utils.h
src/gpu/acceleration/: gpu_aabb.h  gpu_aabb_ops.h  gpu_acceleration_structure.h  gpu_bvh_build_api.cu  gpu_bvh_build_api.h  gpu_intersection.cu  gpu_intersection.h  gpu_morton.h  gpu_sobb.h  gpu_sobb_ops.h
src/gpu/config/: gpu_acceleration_structure_config.h  gpu_config_bridge.cc  gpu_config_bridge.h  gpu_render_config.h
src/gpu/framebuffer/: gpu_framebuffer.cc  gpu_framebuffer.h
src/gpu/renderer/: gpu_pathtracer.cu  gpu_pathtracer.h  gpu_ray_context.h  gpu_raytracer.cu  gpu_raytracer.h  gpu_raytracer_bounce.cu  gpu_raytracer_bounce.h  gpu_raytracer_impl.cu  gpu_raytracer_impl.h  gpu_raytracer_kernels.cu  gpu_raytracer_kernels.h  gpu_raytracer_stack.cu  gpu_raytracer_stack.h  gpu_renderer_api.cu  gpu_renderer_api.h  gpu_renderer_util.h  gpu_trace_context.h
src/gpu/scene/: gpu_ray.h  gpu_ray_hit.h  gpu_ray_ops.h  gpu_scene.cc  gpu_scene.h  gpu_triangle.h  gpu_triangle_ops.h
src/io/config/: config_loader.h  json_config_loader.cc  json_config_loader.h
src/io/image/: image_exporter.h  image_exporter_factory.cc  image_exporter_factory.h  ppm_image_exporter.cc  ppm_image_exporter.h
src/io/scene/: obj_scene_loader.cc  obj_scene_loader.h  scene_loader.h  scene_loader_factory.cc  scene_loader_factory.h
src/io/stats/: console_stats_exporter.cc  console_stats_exporter.h  json_stats_exporter.cc  json_stats_exporter.h  stats_exporter.h  stats_exporter_factory.cc  stats_exporter_factory.h
src/renderer/: bvh_renderer.cc  bvh_renderer.h  cpu_raytracer.cc  cpu_raytracer.h  gpu_raytracer.cc  gpu_raytracer.h  gpu_renderer.cc  gpu_renderer.h  renderer.h
src/scene/: camera.h  light.h  material.h  ray.h  ray_hit.h  scene.cc  scene.h  triangle.cc  triangle.h  vertex.h
src/stats/: acceleration_stats.h  construction_stats.h  raytracing_stats.h  stats.h
src/util/: colors.h  logger.h  timer.h  util.h  vec3.h
